Refactor Line entity to change qty to default 1 and update day to use an array; adjust form labels and styles in new.html.twig and h3.html.twig

--- a/templates/member/product/list/new.html.twig
+++ b/templates/member/product/list/new.html.twig
@@ -16,10 +16,10 @@
                 {{ form_start(form, {'class': 'w-full'}) }}
                 <div class="p-4 flex flex-col space-y-8">
                     {#                    Quantiy / product / add  #}
-                    <div class="w-full flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
+                    <div class="w-full flex flex-col items-end  md:flex-row space-y-4 md:space-y-0 md:space-x-4">
                         <div class="w-full flex  md:flex-1 items-center space-x-4">
                             <div class="w-16">
-                                {{ form_label(form.qty, 'Q', {'label_attr': {'class': 'block text-sm font-medium text-content-light dark:text-content-primary-dark/80 p-2.5'}}) }}
+                                {{ form_label(form.qty, 'Q', {'label_attr': {'class': 'block text-basis font-medium text-content-light dark:text-content-primary-dark/80 p-2.5'}}) }}
                                 {{ form_widget(form.qty, {
                                     'type':'number',
                                     'attr': {
@@ -31,7 +31,7 @@
 
                             </div>
                             <div class="flex flex-col flex-1">
-                                {{ form_label(form.product, 'Produits', {'label_attr': {'class': 'block text-sm font-medium text-content-light dark:text-content-primary-dark/80 p-2.5'}}) }}
+                                {{ form_label(form.product, 'Produits', {'label_attr': {'class': 'block text-basis font-medium text-content-light dark:text-content-primary-dark/80 p-2.5'}}) }}
                                 {{ form_widget(form.product, {'attr': {'class': 'form-control font-semibold bg-base-light/50 border border-gray-300 text-content-primary-light rounded-lg focus:ring-2 focus:ring-base-dark focus:border-base-dark block w-full p-2.5 dark:bg-base/50 dark:border-base-dark/80 dark:placeholder-content-primary-dark/40 dark:text-content-primary-light/90 dark:focus:base-dark/80 dark:focus:border-base-dark/80 focus:ring-base-dark/20 focus:outline-none focus-visible:ring'}}) }}
                             </div>
                         </div>
@@ -47,7 +47,7 @@
                     {#                 END   Quantiy / product / add  #}
                     <div class="w-full flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
                         <div class="w-full space-y-4 flex flex-col">
-                            {{ form_label(form.day, null, {'label_attr': {'class': 'block text-sm font-medium text-content-light dark:text-content-primary-dark/80 p-2.5'}}) }}
+                            {{ form_label(form.day, null, {'label_attr': {'class': 'block text-basis font-medium text-content-light dark:text-content-primary-dark/80 p-2.5'}}) }}
                             <div class="grid grid-cols-2 md:grid-cols-4 gap-4 form-control font-semibold bg-base-light/50 border border-gray-300 text-content-primary-light rounded-lg focus:ring-2 focus:ring-base-dark focus:border-base-dark block w-full p-2.5 dark:bg-base/50 dark:border-base-dark/80 dark:placeholder-content-primary-dark/40 dark:text-content-primary-light/90 dark:focus:base-dark/80 dark:focus:border-base-dark/80 focus:ring-base-dark/20 focus:outline-none focus-visible:ring">
                                 {% for checkbox in form.day %}
                                     <div class="flex items-center space-x-4">
@@ -58,9 +58,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="w-full flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
+                    <div class="w-full flex flex-col items-end md:flex-row space-y-4 md:space-y-0 md:space-x-4">
                         <div class="flex flex-col flex-1">
-                            {{ form_label(form.dose, null, {'label_attr': {'class': 'block text-sm font-medium text-content-light dark:text-content-primary-dark/80 p-2.5'}}) }}
+                            {{ form_label(form.dose, null, {'label_attr': {'class': 'block text-basis font-medium text-content-light dark:text-content-primary-dark/80 p-2.5'}}) }}
                             {{ form_widget(form.dose, {'attr': {
                                 'class': 'form-control font-semibold bg-base-light/50 border border-gray-300 text-content-primary-light rounded-lg focus:ring-2 focus:ring-base-dark focus:border-base-dark block w-full p-2.5 dark:bg-base/50 dark:border-base-dark/80 dark:placeholder-content-primary-dark/40 dark:text-content-primary-light/90 dark:focus:base-dark/80 dark:focus:border-base-dark/80 focus:ring-base-dark/20 focus:outline-none focus-visible:ring'
                             }}) }}
@@ -83,48 +83,52 @@
             <div {{ stimulus_target('modale-dose', 'container' ) }}
                     class="fixed inset-0 bg-gray-600 bg-opacity-60 hidden items-center justify-center z-50">
 
-                <div class="w-full md:w-96 p-4 flex flex-col space-y-8 bg-surface-light dark:bg-surface-dark p-4 rounded shadow-lg">
+                <div class="w-full md:w-96 p-4 flex flex-col space-y-8 bg-surface-light dark:bg-surface-dark p-4 rounded shadow-lg p-6">
                     {{ form_start(formDose, {'attr': {'data-modale-dose-target': 'form'}}) }}
-                    <twig:title:h3>A quelle frequence</twig:title:h3>
-                    <div class="space-y-4">
-                        {{ form_label(formDose.frequency, 'Fréquence', {'label_attr': {'class': 'block text-sm font-medium text-content-light dark:text-content-primary-dark/80'}}) }}
+                    <div class="flex justify-between items-center">
+                        <twig:title:h3>A quelle frequence ?</twig:title:h3>
+                        <span class="cursor-pointer" {{ stimulus_action('modale-dose', 'close', 'click') }}>
+                        <twig:ux:icon name="si:close-duotone"
+                                      class="w-6 text-content-primary-light/70 dark:text-content-primary-dark/70"/>
+                        </span>
+                    </div>
+
+                    <div class="p-2.5 space-y-4">
+                        {{ form_label(formDose.frequency, 'Fréquence', {'label_attr': {'class': 'block text-basis font-medium text-content-light dark:text-content-primary-dark/80'}}) }}
                         {{ form_widget(formDose.frequency, {'attr': {
                             'data-modale-dose-target': "frequency",
-                            'class': 'form-control bg-base-light/50 border border-gray-300 text-content-light rounded-lg focus:ring-2 focus:ring-base-dark focus:border-base-dark block w-full p-2.5 dark:bg-base/50 dark:border-base-dark/80 dark:placeholder-content-primary-dark/40 dark:text-content-primary-dark/90 dark:focus:base-dark/80 dark:focus:border-base-dark/80 focus:ring-base-dark/20 focus:outline-none focus-visible:ring'
+                            'class': 'form-control bg-base-light/50 border border-gray-300 text-content-light/80 rounded-lg focus:ring-2 focus:ring-base-dark focus:border-base-dark block w-full p-2.5 dark:bg-base/50 dark:border-base-dark/80 dark:placeholder-content-primary-light/40 dark:text-content-primary-light/80 dark:focus:base-dark/80 dark:focus:border-base-dark/80 focus:ring-base-dark/20 focus:outline-none focus-visible:ring'
                         }}) }}
                     </div>
-                    <div {{ stimulus_target('modale-dose', 'frequencyNew') }} class="space-y-4 hidden">
-                        {{ form_label(formDose.frequencyNew.name, 'Nouvelle fréquence', {'label_attr': {'class': 'block text-sm font-medium text-content-light dark:text-content-primary-dark/80'}}) }}
+                    <div {{ stimulus_target('modale-dose', 'frequencyNew') }} class="p-2.5 space-y-4 hidden">
+                        {{ form_label(formDose.frequencyNew.name, 'Nouvelle fréquence', {'label_attr': {'class': 'block text-basis font-medium text-content-light dark:text-content-primary-dark/80'}}) }}
                         {{ form_widget(formDose.frequencyNew.name, {'attr': {
-                            'class': 'form-control bg-base-light/50 border border-gray-300 text-content-light rounded-lg focus:ring-2 focus:ring-base-dark focus:border-base-dark block w-full p-2.5 dark:bg-base/50 dark:border-base-dark/80 dark:placeholder-content-primary-dark/40 dark:text-content-primary-dark/90 dark:focus:base-dark/80 dark:focus:border-base-dark/80 focus:ring-base-dark/20 focus:outline-none focus-visible:ring'
+                            'class': 'form-control bg-base-light/50 border border-gray-300 text-content-light/80 rounded-lg focus:ring-2 focus:ring-base-dark focus:border-base-dark block w-full p-2.5 dark:bg-base/50 dark:border-base-dark/80 dark:placeholder-content-primary-light/40 dark:text-content-primary-light/80 dark:focus:base-dark/80 dark:focus:border-base-dark/80 focus:ring-base-dark/20 focus:outline-none focus-visible:ring'
                         }}) }}
                     </div>
 
 
-                    <twig:title:h3>Moment</twig:title:h3>
-                    <div class="space-y-4">
-                        {{ form_label(formDose.moment, 'Moment', {'label_attr': {'class': 'block text-sm font-medium text-content-light dark:text-content-primary-dark/80'}}) }}
+                    <twig:title:h3>Moment de la journée</twig:title:h3>
+                    <div class="p-2.5 space-y-4">
+                        {{ form_label(formDose.moment, 'Moment', {'label_attr': {'class': 'block text-basis font-medium text-content-light dark:text-content-primary-dark/80'}}) }}
                         {{ form_widget(formDose.moment, {'attr': {
                             'data-modale-dose-target': "moment",
-                            'class': 'form-control bg-base-light/50 border border-gray-300 text-content-light rounded-lg focus:ring-2 focus:ring-base-dark focus:border-base-dark block w-full p-2.5 dark:bg-base/50 dark:border-base-dark/80 dark:placeholder-content-primary-dark/40 dark:text-content-primary-dark/90 dark:focus:base-dark/80 dark:focus:border-base-dark/80 focus:ring-base-dark/20 focus:outline-none focus-visible:ring'
+                            'class': 'form-control bg-base-light/50 border border-gray-300 text-content-light/80 rounded-lg focus:ring-2 focus:ring-base-dark focus:border-base-dark block w-full p-2.5 dark:bg-base/50 dark:border-base-dark/80 dark:placeholder-content-primary-light/40 dark:text-content-primary-light/80 dark:focus:base-dark/80 dark:focus:border-base-dark/80 focus:ring-base-dark/20 focus:outline-none focus-visible:ring'
                         }}) }}
                     </div>
-                    <div {{ stimulus_target('modale-dose', 'momentNew') }} class="space-y-4 hidden">
-                        {{ form_label(formDose.momentNew.name, 'Nouveau moment', {'label_attr': {'class': 'block text-sm font-medium text-content-light dark:text-content-primary-dark/80'}}) }}
+                    <div {{ stimulus_target('modale-dose', 'momentNew') }} class="p-2.5 space-y-4 hidden">
+                        {{ form_label(formDose.momentNew.name, 'Nouveau moment', {'label_attr': {'class': 'block text-basis font-medium text-content-light dark:text-content-primary-dark/80'}}) }}
                         {{ form_widget(formDose.momentNew.name, {'attr': {
-                            'class': 'form-control bg-base-light/50 border border-gray-300 text-content-light rounded-lg focus:ring-2 focus:ring-base-dark focus:border-base-dark block w-full p-2.5 dark:bg-base/50 dark:border-base-dark/80 dark:placeholder-content-primary-dark/40 dark:text-content-primary-dark/90 dark:focus:base-dark/80 dark:focus:border-base-dark/80 focus:ring-base-dark/20 focus:outline-none focus-visible:ring'
+                            'class': 'form-control bg-base-light/50 border border-gray-300 text-content-light/80 rounded-lg focus:ring-2 focus:ring-base-dark focus:border-base-dark block w-full p-2.5 dark:bg-base/50 dark:border-base-dark/80 dark:placeholder-content-primary-light/40 dark:text-content-primary-light/80 dark:focus:base-dark/80 dark:focus:border-base-dark/80 focus:ring-base-dark/20 focus:outline-none focus-visible:ring'
                         }}) }}
                     </div>
 
-                    {# {{ form_widget(formDose.submit, {'attr': {
-                                    'data-action': 'click->modal#submit',
-                                    'class': 'w-full md:w-fit text-content-primary-light bg-content-secondary hover:bg-content-secondary/80  focus:outline-none ring-1 ring-content-secondary focus:ring-content-secondary/50 font-medium rounded-lg text-sm px-5 py-3 text-center dark:bg-content-secondary/90 dark:hover:bg-content-secondary/70 dark:focus:ring-content-secondary/80'
-                                }}) }} #}
-                    <button {{ stimulus_action('modale-dose', 'submit', 'click', ) }}
-                            {#                                href="{{ path('member_dose_new') }}" #}
-                            class="inline-block w-full md:w-20 bg-base-light/80 capitalize text-center font-semibold hover:underline underline-offset-8  drop-shadow-lg border border-gray-300 text-content-primary-light  rounded-lg focus:ring-2 focus:ring-base-dark focus:border-base-dark p-2.5 dark:bg-base/50 dark:border-base-dark/80 dark:placeholder-content-primary-dark/40 dark:text-content-primary-dark/70 dark:focus:base-dark/80 dark:focus:border-base-dark/80 focus:ring-base-dark/20 focus:outline-none focus-visible:ring">
-                        Ajouter
-                    </button>
+                    <div class="p-2.5">
+                        <twig:button:action attributes="{{ stimulus_action('modale-dose', 'submit', 'click') }}">
+                            Ajouter
+                        </twig:button:action>
+                    </div>
+
                     {{ form_end(formDose) }}
                 </div>
 
@@ -132,24 +136,29 @@
 
             <!-- Modale for product -->
             <div {{ stimulus_target('modale-product', 'container' ) }}
-                    class="fixed inset-0 bg-gray-600 bg-opacity-60 hidden items-center justify-center z-50">
+                    class="fixed inset-0 bg-gray-600 bg-opacity-80 hidden items-center justify-center z-50">
 
-                <div class="w-full md:w-96 p-4 flex flex-col space-y-8 bg-surface-light dark:bg-surface-dark p-4 rounded shadow-lg">
+                <div class="w-full md:w-96 p-4 flex flex-col space-y-8 bg-surface-light dark:bg-surface-dark p-4 rounded shadow-lg p-6">
                     {{ form_start(formProduct, {'attr': {'data-modale-product-target': 'form'}}) }}
-                    <twig:title:h3>Ajoutez un produit</twig:title:h3>
-                    <div class="space-y-4">
-                        {{ form_label(formProduct.name, null, {'label_attr': {'class': 'block text-sm font-medium text-content-light dark:text-content-primary-dark/80'}}) }}
+                    <div class="flex justify-between items-center">
+                        <twig:title:h3>Ajoutez un produit</twig:title:h3>
+                        <span class="cursor-pointer" {{ stimulus_action('modale-product', 'close', 'click') }}>
+                        <twig:ux:icon name="si:close-duotone"
+                                      class="w-6 text-content-primary-light/70 dark:text-content-primary-dark/70"/>
+                        </span>
+                    </div>
+                    <div class="p-2.5 space-y-4">
+                        {{ form_label(formProduct.name, null, {'label_attr': {'class': 'block text-sm font-medium text-content-light dark:text-content-primary-dark/80 p-2'}}) }}
                         {{ form_widget(formProduct.name, {'attr': {
                             'data-modale-product-target': "name",
-                            'class': 'form-control bg-base-light/50 border border-gray-300 text-content-light rounded-lg focus:ring-2 focus:ring-base-dark focus:border-base-dark block w-full p-2.5 dark:bg-base/50 dark:border-base-dark/80 dark:placeholder-content-primary-dark/40 dark:text-content-primary-dark/90 dark:focus:base-dark/80 dark:focus:border-base-dark/80 focus:ring-base-dark/20 focus:outline-none focus-visible:ring'
+                            'class': 'form-control bg-base-light/50 border border-gray-300 text-content-primary-light rounded-lg focus:ring-2 focus:ring-base-dark focus:border-base-dark block w-full p-2.5 dark:bg-base/50 dark:border-base-dark/80 dark:placeholder-content-primary-light/40 dark:text-content-primary-light/90 dark:focus:base-dark/80 dark:focus:border-base-dark/80 focus:ring-base-dark/20 focus:outline-none focus-visible:ring'
                         }}) }}
                     </div>
-
-                    <button {{ stimulus_action('modale-product', 'submit', 'click', ) }}
-                            {#                                href="{{ path('member_dose_new') }}" #}
-                            class="inline-block w-full md:w-20 bg-base-light/80 capitalize text-center font-semibold hover:underline underline-offset-8  drop-shadow-lg border border-gray-300 text-content-primary-light  rounded-lg focus:ring-2 focus:ring-base-dark focus:border-base-dark p-2.5 dark:bg-base/50 dark:border-base-dark/80 dark:placeholder-content-primary-dark/40 dark:text-content-primary-dark/70 dark:focus:base-dark/80 dark:focus:border-base-dark/80 focus:ring-base-dark/20 focus:outline-none focus-visible:ring">
-                        Ajouter
-                    </button>
+                    <div class="p-2.5">
+                        <twig:button:action attributes="{{ stimulus_action('modale-product', 'submit', 'click') }}">
+                            Ajouter
+                        </twig:button:action>
+                    </div>
                     {{ form_end(formProduct) }}
                 </div>
 
