--- a/templates/components/title/h3.html.twig
+++ b/templates/components/title/h3.html.twig
@@ -1,3 +1,3 @@
-<h2 {{ attributes.defaults({'class': 'text-lg font-semibold text-gray-900 dark:text-white'})}}>
+<h3 {{ attributes.defaults({'class': 'text-lg font-semibold text-gray-900 dark:text-white p-2.5'})}}>
     {% block content %} {% endblock %}
-</h2>
+</h3>
