Refactor conditions-use_fr.html.twig to update template inheritance path

--- a/templates/landing/conditions-use_fr.html.twig
+++ b/templates/landing/conditions-use_fr.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base_security.html.twig' %}
+{% extends '../base_security.html.twig' %}
 
 {% block body %}
     <article style="text-align: left">
