--- a/templates/_template-parts/_lateral-nav.html.twig
+++ b/templates/_template-parts/_lateral-nav.html.twig
@@ -9,44 +9,44 @@
     </div>
     <ul class="menu-vertical">
         <li class="
-            {% if app.request.attributes.get('_route') == 'admin_index' %}active{% endif %}">
-            <a href="{{ path('admin_index') }}">
+            {% if app.request.attributes.get('_route') == 'member_index' %}active{% endif %}">
+            <a href="{{ path('member_index') }}">
                 <i class="material-icons-round">home</i> Accueil
             </a>
         </li>
         <li class="
-            {% if app.request.attributes.get('_route') == 'admin_line' %}active{% endif %}">
-            <a href="{{ path('admin_line_index') }}">
+            {% if app.request.attributes.get('_route') == 'member_line' %}active{% endif %}">
+            <a href="{{ path('member_line_index') }}">
                 <i class="material-icons-round">
                     format_list_bulleted</i> Ma liste
             </a>
         </li>
         <li class="
-            {% if app.request.attributes.get('_route') == 'admin_profile' %}active{% endif %}">
-            <a href="{{ path('admin_profile_update') }}">
+            {% if app.request.attributes.get('_route') == 'member_profile' %}active{% endif %}">
+            <a href="{{ path('member_profile_update') }}">
                 <i class="material-icons-round">person</i> Mon profil
             </a>
         </li>
         {% if is_granted('ROLE_ADMIN') %}
-            <li class=" {% if ( 'admin_product' in app.request.attributes.get('_route'  )) %} active {% endif %}">
-                <a href="{{ path('admin_product_index') }}">
+            <li class=" {% if ( 'member_product' in app.request.attributes.get('_route'  )) %} active {% endif %}">
+                <a href="{{ path('member_product_index') }}">
                     <i class="material-icons-round">inventory_2</i> Produits
                 </a>
             </li>
 
-            <li class=" {% if ( 'admin_frequency' in app.request.attributes.get('_route'  )) %} active {% endif %}">
-                <a href="{{ path('admin_frequency_index') }}">
+            <li class=" {% if ( 'member_frequency' in app.request.attributes.get('_route'  )) %} active {% endif %}">
+                <a href="{{ path('member_frequency_index') }}">
                     <i class="material-icons-round">timelapse</i> Fréquences
                 </a>
             </li>
-            <li class=" {% if ( 'admin_moment' in app.request.attributes.get('_route'  )) %} active {% endif %}">
-                <a href="{{ path('admin_moment_index') }}">
+            <li class=" {% if ( 'member_moment' in app.request.attributes.get('_route'  )) %} active {% endif %}">
+                <a href="{{ path('member_moment_index') }}">
                     <i class="material-icons-round">watch</i> Moment
                 </a>
             </li>
         {% endif %}
-        <li class=" {% if ( 'admin_dose' in app.request.attributes.get('_route'  )) %} active {% endif %}">
-            <a href="{{ path('admin_dose_index') }}">
+        <li class=" {% if ( 'member_dose' in app.request.attributes.get('_route'  )) %} active {% endif %}">
+            <a href="{{ path('member_dose_index') }}">
                 <i class="material-icons-round">water_drop</i> Dosage
             </a>
         </li>
@@ -60,9 +60,9 @@
 {#                <i class="material-icons-round">watch</i> Quitter#}
 {#            </a>#}
 {#        </li>#}
-        {# <li class=" {% if (app.request.attributes.get('_route') == 'admin_product_index')
-            or (app.request.attributes.get('_route') == 'admin_product_update') %}active{% endif %}">
-                <a href="{{ path('admin_product_index') }}">
+        {# <li class=" {% if (app.request.attributes.get('_route') == 'member_product_index')
+            or (app.request.attributes.get('_route') == 'member_product_update') %}active{% endif %}">
+                <a href="{{ path('member_product_index') }}">
                     <i class="material-icons-round">inventory_2</i> Produits
                 </a>
             </li> #}
