--- a/templates/_template-parts/_lines-list.html.twig
+++ b/templates/_template-parts/_lines-list.html.twig
@@ -1,4 +1,4 @@
-{#Emmbed this template to dispay a list#}
+{# Emmbed this template to dispay a list #}
 <section class="bg-surface-light/50 dark:bg-surface-dark/30 p-3 sm:p-5 space-y-8">
     <div class="mx-auto max-w-screen-xl px-4 lg:px-12">
         <div class="bg-surface-light dark:bg-surface-dark relative shadow-md sm:rounded-lg overflow-hidden">
@@ -7,15 +7,15 @@
             <div class="flex flex-col md:flex-row items-center justify-between space-y-3 md:space-y-0 md:space-x-4 p-4">
                 <div class="w-full md:w-auto flex flex-col md:flex-row space-y-2 md:space-y-0 items-stretch md:items-center justify-end md:space-x-3 flex-shrink-0">
                     {% block button_action %}
-{#                    <a href="{{ path('member_line_new') }}"#}
-{#                            class="flex items-center justify-center text-content-primary-dark bg-surface-dark hover:bg-surface-dark/80 focus:ring-4 focus:ring-surface-dark/30 font-medium rounded-lg text-sm px-4 py-2 dark:text-content-primary-light dark:bg-surface-light/60 dark:hover:bg-surface-light/70 focus:outline-none dark:focus:ring-surface-light/80">#}
-{#                        <svg class="h-3.5 w-3.5 mr-2" fill="currentColor" viewbox="0 0 20 20"#}
-{#                             xmlns="http://www.w3.org/2000/svg" aria-hidden="true">#}
-{#                            <path clip-rule="evenodd" fill-rule="evenodd"#}
-{#                                  d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"/>#}
-{#                        </svg>#}
-{#                        {% trans %} button.add{% endtrans %}#}
-{#                    </a>#}
+                        {#                    <a href="{{ path('member_line_new') }}" #}
+                        {#                            class="flex items-center justify-center text-content-primary-dark bg-surface-dark hover:bg-surface-dark/80 focus:ring-4 focus:ring-surface-dark/30 font-medium rounded-lg text-sm px-4 py-2 dark:text-content-primary-light dark:bg-surface-light/60 dark:hover:bg-surface-light/70 focus:outline-none dark:focus:ring-surface-light/80"> #}
+                        {#                        <svg class="h-3.5 w-3.5 mr-2" fill="currentColor" viewbox="0 0 20 20" #}
+                        {#                             xmlns="http://www.w3.org/2000/svg" aria-hidden="true"> #}
+                        {#                            <path clip-rule="evenodd" fill-rule="evenodd" #}
+                        {#                                  d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"/> #}
+                        {#                        </svg> #}
+                        {#                        {% trans %} button.add{% endtrans %} #}
+                        {#                    </a> #}
                     {% endblock %}
                 </div>
             </div>
@@ -41,7 +41,14 @@
                                 {{ item.name|default('N/A') }}
                             </th>
                             <td class="px-4 py-3"> {{ item.qty|default('N/A') }}</td>
-                            <td class="px-4 py-3">{{ item.day|default('N/A') }}</td>
+                            <td class="px-4 py-3">
+                                {% for day in item.days %}
+
+                                    {{ ('day.'~day) | trans }}
+                                {% else %}
+                                    N/A
+                                {% endfor %}
+                            </td>
                             <td class="px-4 py-3">{{ item.dose.frequency.name|default('N/A') }}</td>
                             <td class="px-4 py-3">{{ item.dose.moment.name|default('N/A') }}</td>
                             <td class="px-4 py-3 flex items-center justify-end">
