--- a/templates/_template-parts/_lines-list.html.twig
+++ b/templates/_template-parts/_lines-list.html.twig
@@ -42,7 +42,7 @@
                             </th>
                             <td class="px-4 py-3"> {{ item.qty|default('N/A') }}</td>
                             <td class="px-4 py-3">
-                                {% for day in item.days %}
+                                {% for day in item.days | sort%}
 
                                     {{ ('day.'~day) | trans }}
                                 {% else %}
@@ -69,7 +69,7 @@
                                                class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Show</a>
                                         </li>
                                         <li>
-                                            <a href="#"
+                                            <a href="{{ path('member_line_update', {'id': item.id}) }}"
                                                class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Edit</a>
                                         </li>
                                     </ul>
