--- a/templates/member/product/list/new.html.twig
+++ b/templates/member/product/list/new.html.twig
@@ -6,7 +6,10 @@
 
 {% block body %}
 
-    <section
+    {% include 'member/product/list/_form.html.twig' with {'button_label': 'button.line.add'} %}
+
+
+    {# <section
             class="bg-surface-light/50 dark:bg-surface-dark/30 p-3 sm:p-5 space-y-8" {{ stimulus_controller('modale-dose modale-product') }}>
         <div class="mx-auto max-w-screen-xl px-4 lg:px-12">
             <div class="bg-surface-light dark:bg-surface-dark relative shadow-md sm:rounded-lg overflow-hidden">
@@ -15,7 +18,7 @@
 
                 {{ form_start(form, {'class': 'w-full'}) }}
                 <div class="p-4 flex flex-col space-y-8">
-                    {#                    Quantiy / product / add  #}
+                    #}{#                    Quantiy / product / add  #}{#
                     <div class="w-full flex flex-col items-end  md:flex-row space-y-4 md:space-y-0 md:space-x-4">
                         <div class="w-full flex  md:flex-1 items-center space-x-4">
                             <div class="w-16">
@@ -44,7 +47,7 @@
                             </twig:button:action>
                         </div>
                     </div>
-                    {#                 END   Quantiy / product / add  #}
+                    #}{#                 END   Quantiy / product / add  #}{#
                     <div class="w-full flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
                         <div class="w-full space-y-4 flex flex-col">
                             {{ form_label(form.days, null, {'label_attr': {'class': 'block text-basis font-medium text-content-light dark:text-content-primary-dark/80 p-2.5'}}) }}
@@ -164,5 +167,5 @@
 
             </div>
         </div>
-    </section>
+    </section>#}
 {% endblock %}
