--- a/templates/member/product/list/update.html.twig
+++ b/templates/member/product/list/update.html.twig
@@ -1,17 +1,19 @@
-{% extends '../..' %}
+{% extends 'base.html.twig' %}
 
 {% set object = 'line' %}
 
 {% block title %}Modifier un médicament dans la liste{% endblock %}
 
-{% block header_h1 %} Méciaments dans la liste{% endblock %}
-{% block comment %} {% endblock %}
-{% block card_title %} Modifier {% endblock %}
-{% block submit %}
-    <div class="flow-row">
-        <input type="submit" class="btn auto-min bg-primary text-white" value="Modifier" style="margin-right: 1rem">
-        <a href="{{ path('member_line_new')}}" class="submit btn auto-min bg-primary-lighter text-primary">
-            Ajouter
-        </a>
-    </div>
+{% block body %}
+{% include 'member/product/list/_form.html.twig' with {'button_label': 'button.line.update'} %}
+{#{% block header_h1 %} Médicaments dans la liste{% endblock %}#}
+{#{% block comment %} {% endblock %}#}
+{#{% block card_title %} Modifier {% endblock %}#}
+{#{% block submit %}#}
+{#    <div class="flow-row">#}
+{#        <input type="submit" class="btn auto-min bg-primary text-white" value="Modifier" style="margin-right: 1rem">#}
+{#        <a href="{{ path('member_line_new')}}" class="submit btn auto-min bg-primary-lighter text-primary">#}
+{#            Ajouter#}
+{#        </a>#}
+{#    </div>#}
 {% endblock %}
