Refactor tailwind.config.js to update color values for improved design consistency

--- a/templates/member/product/_form.html.twig
+++ b/templates/member/product/_form.html.twig
@@ -1,6 +1,6 @@
-{{ form_start(form) }}
-<div class="grid gap-4 sm:grid-cols-1 sm:gap-8">
-    <twig:Form:Text :field="form.name" />
-    <twig:Form:Text :field="form.comment"  />
-    <twig:button:submit> {{ button_label|default('Save')|trans }} </twig:button:submit>
-{{ form_end(form) }}
+{#{{ form_start(form) }}#}
+{#<div class="grid gap-4 sm:grid-cols-1 sm:gap-8">#}
+{#    <twig:Form:Text :field="form.name" />#}
+{#    <twig:Form:Text :field="form.comment"  />#}
+{#    <twig:button:submit> {{ button_label|default('Save')|trans }} </twig:button:submit>#}
+{#{{ form_end(form) }}#}
