--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,7 +57,7 @@
 
 </div>
 
-{% include '_template-parts/_footer.html.twig' %}
+{#{% include '_template-parts/_footer.html.twig' %}#}
 </body>
 
 </html>
