Enhance form templates by adding cancel button and updating button attributes

--- a/templates/member/product/list/new.html.twig
+++ b/templates/member/product/list/new.html.twig
@@ -6,7 +6,10 @@
 
 {% block body %}
 
-    {% include 'member/product/list/_form.html.twig' with {'button_label': 'button.line.add'} %}
+    {% include 'member/product/list/_form.html.twig' with {
+        'button_label': 'button.line.add',
+        'button_cancel': 'button.line.cancel',
+    } %}
 
 
     {# <section
