--- a/templates/member/product/list/_form.html.twig
+++ b/templates/member/product/list/_form.html.twig
@@ -64,8 +64,9 @@
                         </twig:button:action>
                     </div>
                 </div>
-                <div class="form-row">
+                <div class="form-row flex space-x-8">
                     <twig:button:submit> {{ button_label|default('Save')|trans }} </twig:button:submit>
+                    <twig:button:secondary href="{{ path('member_line_index') }}"> {{ button_cancel_label|default('Cancel')|trans }} </twig:button:secondary>
                 </div>
             </div>
         </div>
